vlib/v/checker/tests/index_expr_implicit_int_downcast_err.js.out
vlib/v/checker/tests/index_expr_implicit_int_downcast_err.vv:10:12: error: cannot use `u64` as string index type `int`, use an explicit cast like `int(expr)`
    8 |     _ = s[int(idx_u64)]
    9 |     _ = a[idx_u32]
   10 |     println(s[idx_u64])
      |               ~~~~~~~
   11 |     println(a[idx_i64])
   12 |     println(a[idx_usize..])
vlib/v/checker/tests/index_expr_implicit_int_downcast_err.vv:11:12: error: cannot use `i64` as index type `int`, use an explicit cast like `int(expr)`
    9 |     _ = a[idx_u32]
   10 |     println(s[idx_u64])
   11 |     println(a[idx_i64])
      |               ~~~~~~~
   12 |     println(a[idx_usize..])
   13 | }
vlib/v/checker/tests/index_expr_implicit_int_downcast_err.vv:12:12: error: cannot use `usize` as index type `int`, use an explicit cast like `int(expr)`
   10 |     println(s[idx_u64])
   11 |     println(a[idx_i64])
   12 |     println(a[idx_usize..])
      |               ~~~~~~~~~
   13 | }
