vlib/v/checker/tests/index_expr_implicit_int_downcast_err.vv
fn main() {
	s := 'abc'
	a := [1, 2, 3]
	idx_u64 := u64(1)
	idx_u32 := u32(1)
	idx_i64 := i64(1)
	idx_usize := usize(1)
	_ = s[int(idx_u64)]
	_ = a[idx_u32]
	println(s[idx_u64])
	println(a[idx_i64])
	println(a[idx_usize..])
}
